@@ -1,3 +1,8 @@
+2005-05-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* docs/html/test.html: Explain how to run the testsuite on an
+	installed directory. 
+
 2005-05-01  Paolo Carlini  <pcarlini@suse.de>
 
 	* config/os/aix/os_defines.h: Remove obsolete __off_t,
